small fix for youtube on mobile

--- a/public/stylesheets/sass/new-templates.scss
+++ b/public/stylesheets/sass/new-templates.scss
@@ -287,6 +287,7 @@ body {
     }
   }
 
+
   iframe {
     @include box-shadow(0, 3px, 15px, #000);
 
@@ -294,6 +295,11 @@ body {
     height: 480px;
     max-width: 100%;
     max-height: 100%;
+
+    @media (max-width: 480px){
+      width: 340px;
+      height: 240px;
+    }
   }
 }
 
